js/js.translator/testData/incremental/invalidation/privateDeclarationLeakThroughDefaultParam/main/f.0.kt
private konst prop = "0"

internal inline fun foo(lambda: () -> String = ::prop): String {
    return lambda()
}
